Push current codebase to GitHub repository

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
-MONGO_URI=mongodb+srv://user:System123@cluster0.bwfouog.mongodb.net/SwapSkill?retryWrites=true&w=majority
+# MongoDB Connection
+# Note: The environment variable name should match what's used in the code (MONGODB_URI)
+MONGODB_URI=mongodb+srv://user:System123@cluster0.bwfouog.mongodb.net/SkillSwap?retryWrites=true&w=majority
+
+# Node Environment
+# NODE_ENV=development
+
+# # Server Port (optional)
+# PORT=3000
+
+# # Session Secret (for development)
+# SESSION_SECRET=dev-session-secret-key
