--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@
 MONGODB_URI=mongodb+srv://user:System123@cluster0.bwfouog.mongodb.net/SkillSwap?retryWrites=true&w=majority
 
 # Node Environment
-# NODE_ENV=development
+NODE_ENV=development
 
-# # Server Port (optional)
-# PORT=3000
+# Server Port (optional)
+PORT=3000
 
-# # Session Secret (for development)
-# SESSION_SECRET=dev-session-secret-key
+# Session Secret (for development)
+SESSION_SECRET=skillswap-session-secret-change-in-production
