--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
