--- a/.env
+++ b/.env
@@ -5,8 +5,9 @@ MONGODB_URI=mongodb+srv://user:System123@cluster0.bwfouog.mongodb.net/SkillSwap?
 # Node Environment
 NODE_ENV=development
 
-# Server Port (optional)
+# Server Configuration
 PORT=3000
+HOST=0.0.0.0
 
 # Session Secret (for development)
 SESSION_SECRET=skillswap-session-secret-change-in-production
