--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
+    "dev:network": "cross-env NODE_ENV=development HOST=0.0.0.0 PORT=3000 tsx server/index.ts",
+    "start:network": "node start-network.js",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
