--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "fix-sessions": "tsx scripts/fix-sessions.js"
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
