--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:network": "cross-env NODE_ENV=development HOST=0.0.0.0 PORT=3000 tsx server/index.ts",
     "start:network": "node start-network.js",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "fix-sessions": "tsx scripts/fix-sessions.js"
