Production Issue resolution

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ HOST=0.0.0.0
 
 # Session Secret (for development)
 SESSION_SECRET=skillswap-session-secret-change-in-production
+
+# JWT Secret (for JWT-based authentication fallback)
+JWT_SECRET=skillswap-jwt-secret-change-in-production
