--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:network": "node start-network.js",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start:emergency": "cross-env NODE_ENV=production node server/emergency-server.js",
+    "test:production": "node scripts/test-production.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "fix-sessions": "tsx scripts/fix-sessions.js"
